apps/ailab-shared/base/alpine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpine
  namespace: ailab-shared
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: alpine
  template:
    metadata:
      labels:
        app: alpine
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:                  
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                    - ai-lab-2
      containers:
        - name: alpine
          image: docker.io/alpine:3.21
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args: ["tail -f /dev/null"]
          # envFrom:
          #   - secretRef:
          #       name: ailab-shared-secrets
          ports:
            - containerPort: 80
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: ailab-shared-volume
              mountPath: /ailab
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: false
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: tmp
          emptyDir: {}
        - name: ailab-shared-volume
          persistentVolumeClaim:
            claimName: ailab-shared-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: alpine-svc
spec:
  clusterIP: None
  selector:
    app: alpine
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
