apps/ailab-shared/base/fire-pytorch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fire-pytorch
  namespace: ailab-shared
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: fire-pytorch
  template:
    metadata:
      labels:
        app: fire-pytorch
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                    - ai-lab-3
      imagePullSecrets:
        - name: ghcr-image-pull-secret
      containers:
        - name: fire-pytorch
          # image: ghcr.io/ai-cfia/nachet-model-ccds/pytorch-gpu-24-devenv:2025050803
          image: ghcr.io/ai-cfia/nachet-model-ccds/pytorch-gpu-25-devenv:2025111301
          imagePullPolicy: Always
          resources:
            requests:
              nvidia.com/gpu: "1"
            limits:
              nvidia.com/gpu: "1"
          ports:
            - containerPort: 22
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: fire-pytorch-volume
              mountPath: /fire
            - name: dshm
              mountPath: /dev/shm
          securityContext:
            # runAsUser: 1000
            # runAsGroup: 1000
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - SETUID
                - SETGID
                - DAC_OVERRIDE
              drop:
                - ALL_OTHERS
      volumes:
        - name: tmp
          emptyDir: {}
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 16Gi
        - name: fire-pytorch-volume
          persistentVolumeClaim:
            claimName: fire-pytorch-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: fire-pytorch-svc
spec:
  type: ClusterIP
  selector:
    app: fire-pytorch
  ports:
    - protocol: TCP
      port: 22
      targetPort: 22
