apps/ailab-shared/base/pytorchdev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pytorchdev
  namespace: ailab-shared
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: pytorchdev
  template:
    metadata:
      labels:
        app: pytorchdev
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                    - ai-lab-1
      containers:
        - name: pytorchdev
          image: ghcr.io/ai-cfia/nachet-model-ccds/pytorch-gpu-24-devenv:2025050803
          imagePullPolicy: Always
          # command: ["/bin/sh", "-c"]
          # args: ["tail -f /dev/null"]
          # resources:
          #   requests:
          #     cpu: 16
          #     memory: 64Gi
          limits:
            nvidia.com/gpu: 1
          # envFrom:
          #   - secretRef:
          #       name: ailab-shared-secrets
          ports:
            - containerPort: 22
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: ailab-shared-volume
              mountPath: /ailab
            - name: dshm
              mountPath: /dev/shm
          securityContext:
            # runAsUser: 1000
            # runAsGroup: 1000
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - SETUID
                - SETGID
                - DAC_OVERRIDE
              drop:
                - ALL_OTHERS
      volumes:
        - name: tmp
          emptyDir: {}
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 16Gi
        - name: ailab-shared-volume
          persistentVolumeClaim:
            claimName: ailab-shared-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pytorchdevssh-svc
spec:
  clusterIP: 10.96.0.58
  type: NodePort
  selector:
    app: pytorchdev
  ports:
    - protocol: TCP
      port: 22
      targetPort: 22
      nodePort: 30022
      name: ssh
