apps/ailab-shared/base/ubuntu-deployment-jsantos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-jsantos
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ubuntu-jsantos
  template:
    metadata:
      labels:
        app: ubuntu-jsantos
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-type
                    operator: In
                    values:
                      - worker
      containers:
        - name: ubuntu
          image: docker.io/ubuntu:noble-20250127
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args: ["tail -f /dev/null"]
          # envFrom:
          #   - secretRef:
          #       name: ailab-shared-secrets
          ports:
            - containerPort: 22
          volumeMounts:
            - name: tmp
              mountPath: /cachedir_joblib
            - name: ailab-shared-volume
              mountPath: /ailab
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: false
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: tmp
          emptyDir: {}
        - name: ailab-shared-volume
          persistentVolumeClaim:
            claimName: ailab-shared-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ubuntu-jsantos-svc
spec:
  clusterIP: None
  selector:
    app: ubuntu-jsantos
  ports:
    - protocol: TCP
      port: 443
      targetPort: 22
      name: ssh
