apps/ailab-shared/base/yjdev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yjdev
  namespace: ailab-shared
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: yjdev
  template:
    metadata:
      labels:
        app: yjdev
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                    - ai-lab-2
      imagePullSecrets:
        - name: ghcr-image-pull-secret
      containers:
        - name: yjdev
          # image: ghcr.io/ai-cfia/nachet-model-ccds/pytorch-gpu-24-devenv:2025050803
          image: ghcr.io/ai-cfia/nachet-model-ccds/pytorch-gpu-25-devenv:2025111301
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "4"
              memory: 16Gi
          ports:
            - containerPort: 22
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: dshm
              mountPath: /dev/shm
            - name: yjdev-volume
              mountPath: /yjdev
          securityContext:
            # runAsUser: 1000
            # runAsGroup: 1000
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - SETUID
                - SETGID
                - DAC_OVERRIDE
              drop:
                - ALL_OTHERS
      volumes:
        - name: tmp
          emptyDir: {}
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 16Gi
        - name: yjdev-volume
          persistentVolumeClaim:
            claimName: yjdev-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: yjdevssh-svc
spec:
  type: ClusterIP
  selector:
    app: yjdev
  ports:
    - protocol: TCP
      port: 22
      targetPort: 22
