apps/ailab-shared/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pytorchdev-ingress
  annotations:
    lbipam.cilium.io/ips: 10.140.79.73
    ingress.cilium.io/loadbalancer-mode: dedicated
spec:
  ingressClassName: cilium
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pytorchdev-svc
                port:
                  number: 80
