apps/ailab-shared/base/tcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: openssh-tcp
spec:
  parentRefs:
    - name: ailab-shared-gateway
      sectionName: tcp-openssh
      kind: Gateway
  rules:
    - backendRefs:
      - name: openssh-svc
        namespace: ailab-shared
        port: 2222
